# RAG-System

./: .env.template  .gitignore  app.py  frontend.py  pyproject.toml  requirements.txt
controllers/: app_controller.py
evaluation/: eval_models.py  evaluations.py  pre_loader.py  questions.py
evaluation/results/: evaluation_results_Layout.json  evaluation_results_Query Transformation.json  evaluation_results_base.json  evaluation_results_everything.json  evaluation_results_plain.json  evaluation_results_rerank.json
models/: app_models.py  document_models.py
services/: chroma_db_service.py  document_chunking.py  query_service.py  reranking.py
utils/: logger.py  utils.py
